--- a/templates/index.html
+++ b/templates/index.html
@@ -101,6 +101,7 @@
         
         <div class="footer">
             <p><a href="/about">About this website</a></p>
+            <p>If you encounter any issues, please report them at <a href="mailto:dynosure.india@gmail.com">dynosure.india@gmail.com</a>.</p>
         </div>
     </div>
 </body>
